# seismic_detection

./: .gitignore  README.md  format_data.ipynb  format_data.py  pyproject.toml  read_signals.ipynb  renovate.json  requirements.txt  test.ipynb  train.csv  train.json  welcome.txt
.idx/: dev.nix
data/: mars_test_0001.csv  mars_test_0001.json  mars_test_0002.csv  mars_test_0002.json  mars_test_0007.csv  mars_test_0007.json  mars_test_0011.csv  mars_test_0011.json  mars_test_0017.csv  mars_test_0017.json  mars_test_0032.csv  mars_test_0032.json  mars_test_0033.csv  mars_test_0034.json  mars_test_0041.csv  mars_test_0041.json  mars_train_0005.csv  mars_train_0005.json  mars_train_0006.csv  mars_train_0006.json
data/train/: evid00002.json  evid00003.json  evid00004.json  evid00006.json  evid00007.json  evid00008.json  evid00009.json  evid00010.json  evid00011.json  evid00013.json  evid00014.json  evid00015.json  evid00017.json  evid00019.json  evid00021.json  evid00022.json  evid00023.json  evid00024.json  evid00026.json  evid00028.json  evid00029.json  evid00030.json  evid00031.json  evid00032.json  evid00033.json  evid00034.json  evid00035.json  evid00042.json  evid00043.json  evid00044.json  evid00045.json  evid00046.json  evid00049.json  evid00052.json  evid00055.json  evid00060.json  evid00067.json  evid00068.json  evid00070.json  evid00083.json  (+31 more)
notebooks/: format_data.ipynb  model_testing.ipynb  modeling.ipynb  nasa-seismic-detector.ipynb  processing_data.ipynb  try_anomely.ipynb
results/: predictions_results.csv
streamlit/: app.py
(+1 files in other folders)
