[project]
name = "seismic-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5.4.1",
    "matplotlib>=3.9.2",
    "obspy>=1.4.1",
    "pandas>=2.2.3",
    "polars>=1.8.2",
    "pywavelets>=1.7.0",
    "streamlit>=1.38.0",
]
